# sherlock

./: .env.example  .gitignore  README.md  project_scope.md  pyproject.toml
backend/common/: README.md
backend/common/src/: __init__.py
backend/common/src/utils/: bedrock_client.py  check_bedrock_models.py  check_inference.py
backend/doc-analyzer/: README.md  doc_analyzer_agent.py
backend/investigation/: README.md  USAGE.md  run_api.py  test_agent.py
backend/investigation/src/: __init__.py  agent.py  api.py  bedrock_client.py  hypothesis_generator.py  nvd_client.py  tree.py  tree_visualizer.py
backend/log-analyzer/: log_analyzer.py  regex_pattern_matcher.py  run_analyzer.py  test_log_analyzer.py
backend/remediation/: README.md  config.py
backend/remediation/src/: agent.py  api.py  roadmap_generator.py  roadmap_utils.py
docs/architecture/: log_analyzer_improvements.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/pages/InvestigationPage/: InvestigationNode.css  InvestigationNode.jsx  InvestigationPage.css  InvestigationPage.jsx
frontend/src/pages/RemediationPage/: BoardNode.css  BoardNode.jsx  PerspectivePanel.css  PerspectivePanel.jsx  RemediationPage.css  RemediationPage.jsx  RoadmapView.css  RoadmapView.jsx
frontend/src/services/: api.js  remediationApi.js
output/: investigation_report.json  investigation_tree.json  investigation_tree.mmd  investigation_tree_viz.json
sherlock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
